# dayplan

./: .travis.yml  CMakeLists.txt  LICENSE  README.rst
.circleci/: config.yml
inc/dpl/: acc.h  defs.h  dpl.h  dplversion.h.in  entry.h  error.h  group.h  list.h  parser.h  ref.h  task.h  tasklist.h  time.h  utils.h  version.h
src/: acc.c  entry.c  error.c  group.c  list.c  main.c  parser.y  ref.c  task.c  tasklist.c  time.c  utils.c  version.c  worklog.y
test/: acc_durance_1.c  dpl_test.c  dpl_test.h  group_by_day_1.c  group_by_title_1.c  parse_empty.c  parse_error_indent_1.c  parse_error_indent_2.c  parse_ref_list_1.c  parse_task_list_1.c  parse_task_list_2.c  parse_task_list_end_1.c  parse_task_list_end_2.c  parse_task_single_1.c  parse_task_single_2.c  parse_task_single_paddings.c  ref_desc.c  ref_id.c  ref_title.c  task_begin.c  task_desc.c  task_end.c  task_ref.c  task_title.c  tasklist_filter_period_1.c  tasklist_filter_ref_done_1.c  tasklist_filter_task_ref_1.c  tasklist_filter_task_ref_2.c  tasklist_filter_today_1.c  tasklist_filter_today_2.c  tasklist_new.c  tasklist_push.c  tasklist_remove.c  time_fmt_durance.c
test/system/: dpltest.py  test_command.py  test_filter.py  test_parser.py  test_sum.py  test_tasks.py  test_work.py
test/unit/: acc_durance_1.c  dpl_test.c  entry_name.c  entry_task.c  entry_task_1.c  entry_work_1.c  entry_work_2.c  entry_work_3.c  entry_work_attrs.c  filter_task_for_work_1.c  filter_unique_1.c  group_by_category_1.c  group_by_day_1.c  group_by_name_1.c  group_by_title_1.c  list_filter_period_1.c  list_filter_ref_done_1.c  list_filter_task_ref_1.c  list_filter_task_ref_2.c  list_new.c  list_push.c  list_remove.c  list_remove_2.c  list_sort.c  parse_category.c  parse_date_space_1.c  parse_empty.c  parse_error_indent_1.c  parse_error_indent_2.c  parse_ref_list_1.c  parse_task_list_1.c  parse_task_list_2.c  parse_task_list_3.c  parse_task_list_end_1.c  parse_task_list_end_2.c  parse_task_list_newlinesep_1.c  parse_task_list_ref_conflict_1.c  parse_task_multiline_1.c  parse_task_single_1.c  parse_task_single_2.c  (+29 more)
